<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".GameActivity">

    <AutoCompleteTextView
        android:id="@+id/actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="3"
        android:hint="@string/select_a_player"
        android:textColorHint="#757575"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/back_giveUp_guessLeft_layout"
        app:layout_constraintTop_toBottomOf="@+id/actv"
        tools:listitem="@layout/football_player_list" />

    <LinearLayout
        android:id="@+id/back_giveUp_guessLeft_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:weightSum="3">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_string"
                />
            <Button
                android:id="@+id/btnGiveUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giveup_string"
                app:layout_constraintBottom_toTopOf="@id/btnBack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/guessLeftTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guesses_left"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/guessLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_guesses"
                android:textAlignment="center"
                android:textSize="30sp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>